Ensure the placeholder text is high contrast
Since there is no visible label for the search we should ensure the text
itself is the same colour as the icon and therefore high enough
contrast.

--- a/src/stylesheets/components/_site-search.scss
+++ b/src/stylesheets/components/_site-search.scss
@@ -76,6 +76,10 @@ $icon-size: 40px;
     background-repeat: no-repeat;
     background-position: center left -2px;
     background-size: $icon-size $icon-size;
+
+    &::placeholder {
+      color: govuk-colour("dark-grey");
+    }
   }
 
   .app-site-search__input--focused {
